<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="5dp"
    >

    <TextView
        android:id="@+id/TV_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drug_id"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ED_id" />

    <EditText
        android:id="@+id/ED_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/TV_drug_A_ing"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TV_drug_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drug_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ED_drug_name" />
    <EditText
        android:id="@+id/ED_drug_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/hint"
        app:layout_constraintStart_toEndOf="@id/TV_drug_A_ing"
        app:layout_constraintTop_toBottomOf="@id/ED_id"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/TV_drug_A_ing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drug_a_Ing"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ED_drug_A_ing" />
    <EditText
        android:id="@+id/ED_drug_A_ing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toEndOf="@id/TV_drug_A_ing"
        app:layout_constraintTop_toBottomOf="@id/ED_drug_name"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/TV_drug_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drug_category"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/Sp_drug_category" />
    <Spinner
        android:id="@+id/Sp_drug_category"
        android:layout_width="0dp"
        android:layout_marginTop="19dp"
        android:layout_height="30dp"
        android:text="Select Category"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toEndOf="@id/TV_drug_A_ing"
        app:layout_constraintTop_toBottomOf="@id/ED_drug_A_ing"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/TV_drug_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drug_price"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ED_drug_price"/>

    <EditText
        android:id="@+id/ED_drug_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/TV_drug_A_ing"
        app:layout_constraintTop_toBottomOf="@id/Sp_drug_category" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ED_drug_price"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/Clear"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_insert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/insert"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/update"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear"
        android:orientation="horizontal"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/delete"
            android:textColor="@color/design_default_color_error" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_delete_All"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/delete_All"
            android:textColor="@color/design_default_color_error" />


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/linear2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

    </androidx.recyclerview.widget.RecyclerView>



</androidx.constraintlayout.widget.ConstraintLayout>